# captail

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Captail.sln  InstantReplay.sln  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: RELEASING.md
installer/: Captail.iss
native/ObsBridge/: CMakeLists.txt  CaptailObsBridge.cpp  EverloopObsBridge.cpp
native/ObsCaptureFixture/: CMakeLists.txt  ObsCaptureFixture.cpp
src/Captail/: App.xaml  App.xaml.cs  AudioDevices.cs  Autostart.cs  Captail.csproj  Config.cs  EncoderCapabilities.cs  HotkeyManager.cs  Localization.cs  Log.cs  ObsLogBridge.cs  ObsNative.cs  ObsReplayEngine.cs  OverlayNotificationWindow.xaml  OverlayNotificationWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  SingleThreadTaskScheduler.cs  packages.lock.json
src/Captail/Interop/: CaptureInterop.cs
src/Captail/Languages/: Strings.en.xaml  Strings.ru.xaml
src/Captail/Themes/: Theme.xaml
src/InstantReplay/: App.xaml  App.xaml.cs  AudioDevices.cs  Autostart.cs  Config.cs  EncoderCapabilities.cs  HotkeyManager.cs  InstantReplay.csproj  Localization.cs  Log.cs  ObsLogBridge.cs  ObsNative.cs  ObsReplayEngine.cs  OverlayNotificationWindow.xaml  OverlayNotificationWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
src/InstantReplay/Themes/: Theme.xaml
tools/: AcquireObsRuntime.ps1  BuildRelease.ps1  GenerateAppIcon.ps1
(+1 files in other folders)
